Dark mode: Contact name color (fix)
Hope it's last time. Sorry for commit spam.

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -14,7 +14,7 @@
 	--container-dark-color: #1e1e1e;
 	--list-header-color: #222;
 	--blue: #0084ff;
-	--white: #ffffff;
+	--white: #fff;
 }
 
 html.dark-mode body {
